# globwalker

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: fmt.yml  linter.yml  msrv.yml  test.yml
examples/: list.rs
src/: lib.rs
