[package]
name = "globwalker"
version = "0.9.0"
description = "Glob-matched recursive file system walking. Fork of 'globwalk'"
authors = ["Gilad Naaman <gilad@naaman.io>", "Martijn Gribnau <garm@ilumeo.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/foresterre/globwalker"
categories = ["filesystem"]
keywords = ["regex", "glob", "pattern", "walk", "iterator"]

[dependencies]
walkdir = "2"
ignore = "0.4.11"
bitflags = "1.2"

[dev-dependencies]
tempfile = "3"
docmatic = "0.1.2"

# We're not using backtrace, really. It is just a deep dependency of docmatic.
# Locking down its version so that we can compile the tests using rustc 1.31.0
backtrace = "=0.3.35"
