[package]
name = "globwalker"
version = "0.9.0"
description = "Glob-matched recursive file system walking. Fork of 'globwalk'"
authors = ["Gilad Naaman <gilad@naaman.io>", "Martijn Gribnau <garm@ilumeo.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/foresterre/globwalker"
categories = ["filesystem"]
keywords = ["regex", "glob", "pattern", "walk", "iterator"]

[dependencies]
walkdir = "2"
ignore = "0.4.11"
bitflags = "1.2"

[dev-dependencies]
tempfile = "3"
